--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: # Replace with your GitHub Sponsors username
+github: [quinnjr]
 # patreon: # Replace with your Patreon username
 # open_collective: # Replace with your Open Collective username
 # ko_fi: # Replace with your Ko-fi username
