--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -47,7 +47,16 @@ jobs:
 
       - name: Install dependencies
         working-directory: docs
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+
+      - name: Verify PostCSS config
+        working-directory: docs
+        run: |
+          echo "PostCSS config:"
+          cat .postcssrc.json
+          echo ""
+          echo "Tailwind packages:"
+          pnpm list tailwindcss @tailwindcss/postcss
 
       - name: Build Angular app
         working-directory: docs
