fix: update MSRV to 1.85.0 for Edition 2024 support
Edition 2024 requires Rust 1.85.0 or later. Updated:
- CI workflow MSRV check from 1.75.0 to 1.85.0
- Added rust-version = "1.85" to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dependency-injector"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
 description = "High-performance, lock-free dependency injection container for Rust"
 license = "MIT OR Apache-2.0"
 keywords = ["dependency-injection", "di", "ioc", "container", "service-locator"]
