fix: improve benchmark workflow robustness
- Remove --save-baseline flag that may cause issues
- Add output debugging to show last 50 lines of benchmark output
- Add continue-on-error to benchmark store step to allow artifacts to upload

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -36,7 +36,11 @@ jobs:
             ${{ runner.os }}-cargo-bench-
 
       - name: Run benchmarks
-        run: cargo bench --all-features -- --noplot --save-baseline main 2>&1 | tee benchmark-output.txt
+        run: |
+          # Run benchmarks and capture output
+          cargo bench --all-features -- --noplot 2>&1 | tee benchmark-output.txt
+          echo "=== Benchmark output captured ===" 
+          tail -50 benchmark-output.txt
 
       - name: Parse benchmark results to JSON
         run: |
@@ -109,6 +113,7 @@ jobs:
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         if: github.event_name != 'pull_request'
+        continue-on-error: true
         with:
           name: Rust Benchmarks
           tool: 'cargo'
