bench: add comparison benchmarks against other DI approaches
Benchmarks dependency-injector against:
- Manual DI (baseline): ~8ns resolution
- HashMap + RwLock: ~20ns resolution, reader contention
- DashMap (basic): ~21ns resolution

Results show dependency-injector:
- Fastest runtime DI at ~18ns (10% faster than basic DashMap)
- O(1) scaling: 17.8ns @ 10 services → 18.8ns @ 500 services
- Best concurrent scaling: ~81µs for 4-thread workload
- Near-linear thread scaling from 1-8 threads

Also updates docs with comprehensive comparison tables.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,10 @@ criterion = { version = "0.5", features = ["html_reports"] }  # Pin to 0.5 for R
 name = "container_bench"
 harness = false
 
+[[bench]]
+name = "comparison_bench"
+harness = false
+
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false
