test(fuzz): add comprehensive fuzzing test suite
- Add cargo-fuzz configuration with 4 fuzz targets:
  - fuzz_container: Basic registration/resolution with various data shapes
  - fuzz_scoped: Hierarchical scopes and parent chain resolution
  - fuzz_concurrent: Multi-threaded concurrent access patterns
  - fuzz_lifecycle: Lazy init, transients, locking, and lifecycle events

- Uses arbitrary crate for structured input generation
- Tests include:
  - Registration of singleton, lazy, and transient services
  - Resolution from local and parent scopes
  - Concurrent read/write operations
  - Container locking and clear operations
  - Service override in child scopes

- Update README with fuzzing instructions
- Add fuzz artifacts to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ coverage/
 criterion/
 .criterion/
 
+# Fuzzing artifacts
+fuzz/target/
+fuzz/corpus/
+fuzz/artifacts/
+
 # OS generated
 Thumbs.db
 ehthumbs.db
