feat: Phase 4 - Compile-time DI with derive macros
## New Features

### Compile-Time Dependency Injection (#11)

Added `dependency-injector-derive` proc-macro crate with:

- `#[derive(Inject)]` - Generate `from_container()` method
- `#[inject]` attribute - Mark fields for automatic resolution
- `#[inject(optional)]` - Support optional deps with `Option<Arc<T>>`
- Non-injected fields use `Default::default()`

### Usage Example

```rust
use dependency_injector::{Container, Inject};
use std::sync::Arc;

#[derive(Inject)]
struct UserService {
    #[inject]
    db: Arc<Database>,
    #[inject(optional)]
    logger: Option<Arc<Logger>>,
    counter: u64,  // Uses Default
}

let container = Container::new();
container.singleton(Database { url: "...".into() });

let service = UserService::from_container(&container)?;
```

## Files Added

- `dependency-injector-derive/Cargo.toml` - Proc-macro crate config
- `dependency-injector-derive/src/lib.rs` - Derive macro implementation
- `examples/derive.rs` - Usage example

## Other Changes

- Added `derive` feature to main crate
- Re-exported `Inject` macro in prelude
- Updated README with derive documentation
- Updated TODO.md with Phase 4 completion

## Skipped Optimizations

- **SIMD TypeId comparison (#10)**: Modern CPUs already efficiently
  handle 128-bit TypeId comparisons, and ahash is highly optimized.
  The complexity wasn't justified for minimal gains.

Bumped version to 0.1.5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dependency-injector"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2024"
 rust-version = "1.85"
 description = "High-performance, lock-free dependency injection container for Rust"
@@ -23,6 +23,8 @@ logging-json = ["logging", "dep:tracing-subscriber", "tracing-subscriber/json"]
 tracing = ["logging"]
 # Async support
 async = ["dep:tokio"]
+# Derive macros for automatic injection
+derive = ["dep:dependency-injector-derive"]
 
 [dependencies]
 # Lock-free concurrent hashmap - much faster than RwLock<HashMap>
@@ -45,6 +47,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = tr
 
 # Optional async support
 tokio = { version = "1.0", features = ["sync"], optional = true }
+
+# Derive macros (optional)
+dependency-injector-derive = { version = "0.1.0", path = "dependency-injector-derive", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
