fix(build): make cdylib conditional on explicit FFI build
The crate-type was unconditionally set to ["rlib", "cdylib"], causing
shared library artifacts to always be generated even when not needed.

Changes:
- Remove unconditional [lib] crate-type section from Cargo.toml
- Document FFI build command: cargo rustc --release --features ffi --crate-type cdylib
- Update FFI README with correct build instructions
- Update main README FFI section

Now:
- Normal builds only produce .rlib (Rust static library)
- FFI builds explicitly request cdylib output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ readme = "README.md"
 repository = "https://github.com/pegasusheavy/dependency-injector"
 documentation = "https://docs.rs/dependency-injector"
 
-[lib]
-crate-type = ["rlib", "cdylib"]
+# Note: For FFI shared library builds, use:
+#   cargo rustc --release --features ffi --crate-type cdylib
 
 [features]
 default = ["logging"]
