feat(ffi): add cross-language FFI bindings and comprehensive tooling
BREAKING CHANGES: None

Features:
- Add Node.js FFI bindings with koffi (no native compilation)
- Add Python FFI bindings with ctypes
- Add Go FFI bindings with cgo
- Add C# FFI bindings with P/Invoke
- Add di_resolve_json FFI function for JSON-based resolution
- Add TypedBuilder for compile-time dependency verification
- Add deploy scripts for Rust and FFI packages
- Add comprehensive Cursor agent rules (.mdc files)

Documentation:
- Add FFI documentation page to Angular docs site
- Add SEO optimizations (sitemap, robots.txt, meta tags, JSON-LD)
- Add SeoService for dynamic metadata management
- Update examples with cross-language FFI usage

Tooling:
- Switch Node.js bundling to SWC
- Enforce pnpm as package manager for Node.js
- Add .gitignore entries for FFI build artifacts
- Add 12 new Cursor agent rules for specialized guidance

Agent Rules Added:
- rust-di-expert.mdc: DI patterns and best practices
- ffi-developer.mdc: Cross-language FFI development
- api-designer.mdc: API design patterns
- security-auditor.mdc: Unsafe code auditing
- benchmarking.mdc: Performance analysis
- derive-macros.mdc: Procedural macro development
- error-handling.mdc: Error handling patterns
- examples.mdc: Example guidelines
- docs-writer.mdc: Documentation standards
- angular-docs.mdc: Angular site development
- release-manager.mdc: Release workflow
- ci-cd.mdc: GitHub Actions automation

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,32 @@ Desktop.ini
 .env.local
 
 benchmark-results.txt
+
+# Node.js
+node_modules/
+dist/
+*.tsbuildinfo
+package-lock.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+.eggs/
+*.egg
+.pytest_cache/
+.mypy_cache/
+
+# C# / .NET
+bin/
+obj/
+*.nupkg
+
+# Go
+*.exe
+*.test
+
+# Angular
+.angular/
+docs/dist/
