--- a/ffi/nodejs/package.json
+++ b/ffi/nodejs/package.json
@@ -51,7 +51,10 @@
     "vitest": "^1.1.0"
   },
   "files": [
-    "dist",
+    "dist/index.js",
+    "dist/index.js.map",
+    "dist/index.d.ts",
+    "dist/index.d.ts.map",
     "README.md"
   ]
 }
