feat(nodejs): add pre-built native library support
- Add GitHub workflow to build native libraries for all platforms:
  - Linux x64/arm64
  - macOS x64 (Intel) / arm64 (Apple Silicon)
  - Windows x64

- Add postinstall script to automatically download pre-built binaries
  - Downloads from GitHub releases based on version
  - Falls back to local cargo build if available
  - Supports DI_LIBRARY_PATH for custom paths
  - Supports DI_SKIP_DOWNLOAD for offline/CI environments

- Update library path resolution to check multiple locations:
  1. DI_LIBRARY_PATH environment variable
  2. Downloaded native/ directory
  3. Local cargo build (target/release/)
  4. System paths (/usr/local/lib, /usr/lib)

- Add Container.libraryPath() static method for debugging
- Update README with simplified installation instructions
- Update .npmignore to exclude native/ but include scripts/

--- a/ffi/nodejs/.npmignore
+++ b/ffi/nodejs/.npmignore
@@ -5,11 +5,17 @@
 # This file excludes everything NOT in the "files" array
 
 # =============================================================================
+# NATIVE LIBRARIES (downloaded at install time)
+# =============================================================================
+native/
+
+# =============================================================================
 # SOURCE FILES (compiled to dist/)
 # =============================================================================
 src/
 *.ts
 !*.d.ts
+!scripts/*.js
 
 # =============================================================================
 # DEVELOPMENT & BUILD CONFIG
