feat(python): add automatic wheel generation with bundled native libraries
- Add GitHub workflow to build platform-specific wheels:
  - Linux x86_64/aarch64 (manylinux)
  - macOS x86_64 (Intel) / arm64 (Apple Silicon)
  - Windows x86_64
  - Automatic PyPI publishing on release tags

- Update package structure for bundled native libraries:
  - Add native/ directory for bundled .so/.dylib/.dll files
  - Add py.typed marker for PEP 561 type checking
  - Add MANIFEST.in for source distribution
  - Configure setuptools package-data for native libraries

- Add download script for source distribution users:
  - scripts/download_native.py downloads from GitHub releases
  - Supports DI_LIBRARY_PATH for custom library location
  - Supports DI_SKIP_DOWNLOAD for offline/CI environments

- Update library discovery to check bundled libraries first:
  1. DI_LIBRARY_PATH environment variable
  2. Bundled native/ directory (from wheel)
  3. Local cargo build (target/release/)
  4. System paths (/usr/local/lib, /usr/lib)

- Add get_library_path() function for debugging
- Update README with simplified installation instructions

--- a/ffi/python/pyproject.toml
+++ b/ffi/python/pyproject.toml
@@ -46,6 +46,14 @@ Issues = "https://github.com/pegasusheavy/dependency-injector/issues"
 where = ["."]
 include = ["dependency_injector*"]
 
+[tool.setuptools.package-data]
+dependency_injector = [
+    "native/*.so",
+    "native/*.dylib",
+    "native/*.dll",
+    "py.typed",
+]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
